--- a/store/templates/store/all.html
+++ b/store/templates/store/all.html
@@ -23,6 +23,8 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href="{% url 'store:game_details' game.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                        <a href="{% url 'store:update_game' game.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Редактировать</a>
+                        <a href="{% url 'store:delete_game' game.pk %}" type="button" class="btn btn-sm btn-outline-danger">Удалить</a>
                     </div>
                 </div>
             </div>
