--- a/store/templates/store/contacts.html
+++ b/store/templates/store/contacts.html
@@ -54,7 +54,7 @@
                     <div class="mb-3">
                         <label for="message">Сообщение</label>
                         <textarea type="text" name="message" class="form-control" id="message"
-                                  placeholder="Контактный телефон" required></textarea>
+                                  placeholder="Сообщение" required></textarea>
                     </div>
                     <button type="submit" class="btn btn-lg btn-block btn-outline-secondary">Отправить
                     </button>
