--- a/store/templates/store/delete_game.html
+++ b/store/templates/store/delete_game.html
@@ -1,11 +1,11 @@
 {% extends 'store/base.html' %}
 {% load static %}
 
-{% block title %}Добавление игры{% endblock %}
+{% block title %}Удаление игры{% endblock %}
 
 {% block header %}
 <div class="pricing-header p-3 pb-md-4 mx-auto text-center" style="margin-top:50px;">
-    <h1 class=" display-6 fw-normal">Добавьте свою игру в каталог</h1>
+    <h1 class=" display-6 fw-normal">Удалить игру из каталога</h1>
 </div>
 {% endblock %}
 
@@ -15,13 +15,12 @@
     <div class="col-lg-10 col-md-6 col-sm-12 mx-auto">
         <div class="card mb-4 box-shadow">
             <div class="card-header">
-                <h4 class="my-0 font-weight-normal">Заполните поля</h4>
+                <h4 class="my-0 font-weight-normal">Вы уверены, что хотите удалить "{{game.title}}"</h4>
             </div>
             <div class="card-body">
                 <form method="post" enctype="multipart/form-data" action="" class="form-floating">
                     {% csrf_token %}
-                    {{ form.as_p }}
-                    <button type="submit" class="btn btn-lg btn-block btn-outline-primary">Отправить
+                    <button type="submit" class="btn btn-lg btn-block btn-outline-danger">Удалить
                     </button>
                     <a href="{% url 'store:games_all' %}" class="btn btn-lg btn-block btn-outline-secondary">Отмена
                     </a>
