--- a/store/templates/store/home.html
+++ b/store/templates/store/home.html
@@ -14,7 +14,7 @@
 
 {% block content %}
 <div class="row row-cols-10 row-cols-md-3 mb-0 text-center">
-    {% for game in games %}
+    {% for game in object_list %}
     <div class="col">
         <div class="card shadow-sm">
             <img class="card-img-top" height="100%" src="{{ game.image | media_filter }}">
@@ -24,6 +24,8 @@
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="btn-group">
                         <a href="{% url 'store:game_details' game.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Подробнее</a>
+                        <a href="{% url 'store:update_game' game.pk %}" type="button" class="btn btn-sm btn-outline-secondary">Редактировать</a>
+                        <a href="{% url 'store:delete_game' game.pk %}" type="button" class="btn btn-sm btn-outline-danger">Удалить</a>
                     </div>
                 </div>
             </div>
