--- a/store/templates/store/includes/menu.html
+++ b/store/templates/store/includes/menu.html
@@ -12,7 +12,7 @@
                 aria-label="Переключатель навигации">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" style="margin-left:650px;" id="navbarNavDropdown">
+        <div class="collapse navbar-collapse" style="margin-left:620px;" id="navbarNavDropdown">
             <ul class="navbar-nav">
                 <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="{% url 'store:home' %}">Главная</a>
@@ -31,6 +31,9 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'store:add_game' %}">Добавить игру</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'blog:blog_list' %}">Блог</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'store:contacts' %}">Контакты</a>
